--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -14,7 +14,7 @@
         ...
       </summary>
       <div class="absolute max-lg:left-0 lg:right-0 mt-5 bg-base-200 border border-base-content/20 z-1 rounded-lg p-1 space-y-1 du-menu">
-        <%= nav_link t("shared.actions.edit"), edit_organization_path(@organization, drawer: true), data: { turbo_frame: :modal } if policy(@organization).edit? %>
+        <%= nav_link t("shared.actions.edit"), edit_organization_path(@organization), data: { turbo_frame: :modal } if policy(@organization).edit? %>
         <%= nav_link t("organizations.transfers.show.title"), organization_transfer_path(@organization), data: { turbo_frame: :modal } if @organization.can_transfer?(current_user) %>
         <li>
           <%= link_to t("shared.actions.destroy"), @organization, data: { turbo_method: :delete, turbo_confirm: t("shared.actions.confirm") }, class: "" if policy(@organization).destroy? %>
