--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full bg-base-300 text-base-content overflow-hidden">
+<html lang="en" class="h-full bg-base-300 text-base-content">
   <head>
     <%= render "layouts/head" %>
   </head>
-
   <body class="flex h-dvh overflow-hidden" data-controller="mobile-sidebar layout-switcher">
     <% sidebar_layout = cookies[:sidebar_layout] || "default" %>
     <% if sidebar_layout == "default" %>
