--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <div class="flex-grow flex flex-col bg-base-300 min-w-0">
       <header class="sticky z-30 top-0">
         <%= render "shared/navbar" %>
-        <div id="flash" class="absolute left-1/2 -translate-x-1/2 z-40 flex flex-col items-center">
+        <div id="flash" class="fixed bottom-24 lg:bottom-6 right-4 z-40 flex flex-col items-end">
           <%= render "shared/flash" %>
         </div>
       </header>
