--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -7,18 +7,15 @@
   <%# Widescreen sidebar top %>
   <nav class="flex flex-row flex-grow h-full">
     <div class="flex flex-col max-h-dvh overflow-y-auto">
-      <div class="flex flex-col space-y-2">
-        <%= link_to root_path, class: "flex items-center justify-center aspect-square" do %>
+      <ul class="du-menu" data-expanded="true">
+        <%= link_to root_path, class: "flex items-center justify-left mb-2 px-2" do %>
           <%= image_tag "logo.png", alt: "logo", class: "size-8" %>
         <% end %>
-
-        <ul class="du-menu" data-expanded="false">
-          <%= nav_link t("shared.navigation.organizations"), organizations_path, icon: "svg/globe-europe-africa.svg", active: [["organizations", "public/organizations", "users/invitations", "users/membership_requests"], ["index"]] %>
-          <% Current.organizations.each do |organization| %>
-            <%= nav_link organization.name, organization_path(organization), icon: organization_avatar(organization, classes: "size-6"), active: :exclusive %>
-          <% end %>
-        </ul>
-      </div>
+        <%= nav_link t("shared.navigation.organizations"), organizations_path, icon: "svg/globe-europe-africa.svg", active: [["organizations", "public/organizations", "users/invitations", "users/membership_requests"], ["index"]] %>
+        <% Current.organizations.each do |organization| %>
+          <%= nav_link organization.name, organization_path(organization), icon: organization_avatar(organization, classes: "size-6"), active: :inclusive %>
+        <% end %>
+      </ul>
       <div class="mt-auto p-2">
         <%= render "shared/sidebar_toggle" %>
       </div>
