--- a/app/views/notifications/_bell.html.erb
+++ b/app/views/notifications/_bell.html.erb
@@ -1,5 +1,5 @@
 <%= link_to notifications_path, class: "relative text-2xl" do %>
-  🔔
+  <%= image_tag "svg/bell.svg", class: "size-6" %>
   <%= turbo_stream_from "notifications_index_#{current_user.id}" %>
   <div id="notification_index_count">
     <%= render "notifications/notifications_count", unread: user.unread_notifications_count %>
