--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,6 +1,5 @@
 <%= link_to notification.url, 
             class: [
-              # base card - Twitter-like styling with DaisyUI colors
               "group block p-4 transition-colors duration-200",
               "border-b border-base-content/20",
               "hover:bg-base-200",
@@ -14,22 +13,16 @@
 %>
   <div class="flex items-start space-x-3">
     <!-- Icon -->
-    <div class="flex-shrink-0 mt-0.5">
-      <%= inline_svg_tag "svg/bell.svg", 
-                        class: [
-                          "w-5 h-5 transition-colors",
-                          notification.seen? ? 
-                            "text-base-content/60 group-hover:text-success" : 
-                            "text-success"
-                        ].join(" ") %>
+    <div class="flex-shrink-0">
+      <%= inline_svg_tag "svg/bell.svg", class: "w-6 h-6" %>
     </div>
 
     <!-- Content -->
-    <div class="flex-1 min-w-0">
-      <p class="text-sm text-base-content leading-5">
+    <div class="flex-1 min-w-0 space-y-1">
+      <p class="text-sm text-base-content">
         <%= notification.message %>
       </p>
-      <p class="text-xs text-base-content/60 mt-1">
+      <p class="text-xs text-base-content/60">
         <%= time_ago_in_words(notification.created_at) %> ago
       </p>
     </div>
