--- a/app/views/devise/shared/_oauth_links.html.erb
+++ b/app/views/devise/shared/_oauth_links.html.erb
@@ -1,5 +1,6 @@
 <% if devise_mapping.omniauthable? && resource_class.omniauth_providers.any? %>
   <% resource_class.omniauth_providers.each do |provider| %>
+    <% next if ConnectedAccount::PROVIDER_CONFIG[provider.to_sym][:sign_in] == false %>
     <%= button_to omniauth_authorize_path(resource_name, provider),
         data: { turbo: false },
         class: "du-btn du-btn-outline du-btn-block" do %>
