--- a/app/views/notifications/_bell.html.erb
+++ b/app/views/notifications/_bell.html.erb
@@ -1,5 +1,5 @@
 <%= link_to notifications_path, class: "relative" do %>
-  <%= image_tag "svg/bell.svg", class: "size-6" %>
+  <%= inline_svg_tag "svg/bell.svg", class: "size-6" %>
   <%= render "notifications/notifications_count", unread: user.unseen_notifications_count %>
   <%= turbo_stream_from "notifications_index_#{current_user.id}" %>
 <% end %>
