--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -7,6 +7,12 @@
   </div>
 <% end %>
 
+<style>
+  .details-with-menu:not(:has(.du-menu a, .du-menu button)) {
+    display: none !important;
+  }
+</style>
+
 <%= render PageComponent.new(title:, full_width: false) do |component| %>
   <% component.with_action_list do %>
     <details class="max-w-min relative group flex items-center details-with-menu" data-controller="dropdown" data-action="keydown.esc@window->dropdown#close">
