Center align last table cell content by default
Changed the default alignment of the last table cell from end to center, while keeping right alignment on large screens.

--- a/app/assets/tailwind/components/table.css
+++ b/app/assets/tailwind/components/table.css
@@ -56,5 +56,5 @@
 
 /* Align content of the last cell to the end/right */
 .table-responsive tr td:last-child {
-  @apply justify-end lg:text-right;
+  @apply justify-center lg:text-right;
 } 
