--- a/app/views/organizations/transfers/_form.html.erb
+++ b/app/views/organizations/transfers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: organization_transfer_path(Current.organization), method: :patch, class: "contents space-y-4" do |form| %>
+<%= form_with url: organization_transfer_path(Current.organization), method: :patch, class: "contents space-y-4", data: { controller: "form", action: "keydown.ctrl+enter->form#submit keydown.meta+enter->form#submit" } do |form| %>
   <div class="">
     <%= form.label :user_id %>
     <%= form.collection_select :user_id, Current.organization.users.where.not(users: { id: current_user.id }), :id, :email, { include_blank: true, required: true }, { class: "form-input" } %>
