--- a/app/views/shared/_language_picker.html.erb
+++ b/app/views/shared/_language_picker.html.erb
@@ -1,9 +1,9 @@
 <% if I18n.available_locales.count > 1 %>
-  <div class="du-menu du-menu-horizontal">
+  <select onchange="window.location.href=this.value">
     <% I18n.available_locales.each do |locale| %>
-      <li>
-        <%= link_to locale_to_flag(locale), url_for(locale: locale), class: (locale == I18n.locale ? "underline" : "") %>
-      </li>
+      <option value="<%= url_for(locale: locale) %>" <%= 'selected' if locale == I18n.locale %>>
+        <%= locale_to_flag(locale) %>
+      </option>
     <% end %>
-  </div>
+  </select>
 <% end %>
