Update text color class in pricing partial
Replaces 'text-gray-400' with 'text-base-content/50' for improved consistency with the design system in the subscriptions pricing partial.

--- a/app/views/organizations/subscriptions/_pricing.html.erb
+++ b/app/views/organizations/subscriptions/_pricing.html.erb
@@ -42,7 +42,7 @@
 		<% end %>
 	</div>
 
-	<div class="text-center text-gray-400 font-medium text-sm">
+	<div class="text-center text-base-content/50 font-medium text-sm">
 		<%= t(".cancel_security") %>
 	</div>
 <% end %>
