--- a/app/views/users/connected_accounts/index.html.erb
+++ b/app/views/users/connected_accounts/index.html.erb
@@ -1,23 +1,7 @@
-  <% content_for :title, t(".title") %>
+<% content_for :title, t(".title") %>
 
 <div class="space-y-6">
-  <%= render PageComponent.new(title: t(".your_connected_accounts")) do |component| %>
-    <% if @connected_accounts.any? %>
-      <div class="space-y-3">
-        <% current_user.connected_accounts.each do |connected_account| %>
-          <%= render "connected_account", connected_account: connected_account %>
-        <% end %>
-      </div>
-    <% else %>
-      <div class="border border-base-content/20 p-6 rounded-lg text-center flex flex-col items-center gap-3">
-        <div class="text-4xl">🔗</div>
-        <p class="text-base-content"><%= t(".no_accounts_connected") %></p>
-        <p class="text-sm text-base-content/60"><%= t(".connect_to_enable_auth") %></p>
-      </div>
-    <% end %>
-  <% end %>
-
-  <% available_providers = Devise.omniauth_configs.keys.reject { |provider| ConnectedAccount.where(provider: provider, user: current_user).exists? } %>
+  <% available_providers = Devise.omniauth_configs.keys %>
   <% if available_providers.any? %>
     <%= render PageComponent.new(title: t(".available_connections")) do |component| %>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
@@ -38,6 +22,22 @@
             <% end %>
           </div>
         <% end %>
+      </div>
+    <% end %>
+  <% end %>
+
+  <%= render PageComponent.new(title: t(".your_connected_accounts")) do |component| %>
+    <% if @connected_accounts.any? %>
+      <div class="space-y-3">
+        <% current_user.connected_accounts.each do |connected_account| %>
+          <%= render "connected_account", connected_account: connected_account %>
+        <% end %>
+      </div>
+    <% else %>
+      <div class="border border-base-content/20 p-6 rounded-lg text-center flex flex-col items-center gap-3">
+        <div class="text-4xl">🔗</div>
+        <p class="text-base-content"><%= t(".no_accounts_connected") %></p>
+        <p class="text-sm text-base-content/60"><%= t(".connect_to_enable_auth") %></p>
       </div>
     <% end %>
   <% end %>
