--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: organization, class: "contents space-y-4", data: { controller: "form", action: "keydown.ctrl+enter->form#submit keydown.meta+enter->form#submit" }) do |form| %>
+<%= form_with(model: organization, class: "contents space-y-4", data: { controller: "auto-submit", action: "keydown.ctrl+enter->auto-submit#submit keydown.meta+enter->auto-submit#submit" }) do |form| %>
   <%= render "shared/errors", object: form.object %>
 
   <div class="">
