--- a/app/views/shared/_sidebar_2_cols.html.erb
+++ b/app/views/shared/_sidebar_2_cols.html.erb
@@ -11,10 +11,17 @@
         <%= link_to root_path, class: "flex items-center justify-left mb-2 px-2" do %>
           <%= image_tag "logo.png", alt: "logo", class: "size-8" %>
         <% end %>
-        <%= nav_link t("shared.navigation.organizations"), organizations_path, icon: "svg/globe-europe-africa.svg", active: [ [ "organizations", "public/organizations", "users/invitations", "users/membership_requests" ], [ "index" ] ] %>
-        <% Current.organizations.each do |organization| %>
-          <%= nav_link organization.name, organization_path(organization), icon: organization_avatar(organization, classes: "size-6"), active: :inclusive %>
-        <% end %>
+        <li>
+          <%= active_link_to organizations_path, class_active: "du-menu-active", active: [ [ "organizations", "public/organizations", "users/invitations", "users/membership_requests" ], [ "index" ] ] do %>
+            <%= inline_svg_tag "svg/globe-europe-africa.svg" %>
+            <%= t("shared.navigation.organizations") %>
+          <% end %>
+          <ul>
+            <% Current.organizations.each do |organization| %>
+              <%= nav_link organization.name, organization_path(organization), icon: organization_avatar(organization, classes: "size-6"), active: :inclusive %>
+            <% end %>
+          </ul>
+        </li>
       </ul>
       <div class="mt-auto p-2">
         <%= render "shared/sidebar_toggle" %>
