Integrate local_time gem and JavaScript for time display
Added the 'local_time' gem and its JavaScript assets to improve time formatting and localization in the UI. Updated the projects index view to use the local_time helper for created_at and updated_at fields. Pinned and imported the local-time JavaScript module, and initialized it in the application.js entrypoint.

--- a/app/views/organizations/projects/index.html.erb
+++ b/app/views/organizations/projects/index.html.erb
@@ -19,8 +19,8 @@
         <% @projects.each do |project| %>
           <tr>
             <td data-label="<%= Project.human_attribute_name(:name) %>"><%= project.name %></td>
-            <td data-label="<%= Project.human_attribute_name(:created_at) %>"><%= l project.created_at, format: :short %></td>
-            <td data-label="<%= Project.human_attribute_name(:updated_at) %>"><%= l project.updated_at, format: :short %></td>
+            <td data-label="<%= Project.human_attribute_name(:created_at) %>"><%= local_time(project.created_at, format: :short) %></td>
+            <td data-label="<%= Project.human_attribute_name(:updated_at) %>"><%= local_time(project.updated_at, format: :short) %></td>
             <td>
               <%= link_to t("shared.actions.show"), [ @organization, project ], class: "du-btn du-btn-sm du-btn-secondary" %>
             </td>
