namespace user notifications

--- a/app/views/shared/_language_picker.html.erb
+++ b/app/views/shared/_language_picker.html.erb
@@ -1,7 +1,7 @@
 <% if I18n.available_locales.count > 1 %>
   <select onchange="window.location.href=this.value">
     <% I18n.available_locales.each do |locale| %>
-      <option value="<%= url_for(locale: locale) %>" <%= 'selected' if locale == I18n.locale %>>
+      <option value="<%= url_for(locale: locale) %>" <%= "selected" if locale == I18n.locale %>>
         <%= locale_to_flag(locale) %>
       </option>
     <% end %>
