standartize org index views

--- a/app/views/organizations/memberships/_tabs.html.erb
+++ b/app/views/organizations/memberships/_tabs.html.erb
@@ -23,6 +23,4 @@
   ]
 %>
 
-<%= render TabsComponent.new(active_tab: active_tab, tabs: tabs) do %>
-  <%= yield %>
-<% end %>
+<%= render TabsComponent.new(active_tab: active_tab, tabs:) %>
