--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -2,11 +2,7 @@
 
 <%= render "organizations/tabs", active_tab: :my_organizations %>
 
-<%= render PageComponent.new(title: t("organizations.index.title"), full_width: true) do |component| %>
-  <% component.with_action_list do %>
-    <%= link_to t("shared.actions.new"), new_organization_path, data: { turbo_frame: :modal }, class: "du-btn du-btn-primary" %>
-  <% end %>
-
+<%= render PageComponent.new(full_width: true) do |component| %>
   <%= render "organizations/table" %>
 
   <%= render "shared/pagination", pagy: @pagy %>
