--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -1,14 +1,15 @@
 <% content_for :title, t("organizations.edit.title") %>
 
-<%= render PageComponent.new(title: t("organizations.edit.title")) do |component| %>
+<%= render PageComponent.new(title: t("organizations.edit.title"), full_width: false) do |component| %>
   <%= render "form", organization: @organization %>
 <% end %>
 
-<br class="my-4"/>
 
-<%= render PageComponent.new do |component| %>
-  <% component.with_action_list do %>
+<%= render PageComponent.new(full_width: false) do %>
+  <div class="du-divider"></div>
+
+  <div class="flex items-center gap-2">
     <%= link_to t("organizations.transfers.show.title"), organization_transfer_path(@organization), data: { turbo_frame: :modal }, class: "du-btn du-btn-error du-btn-outline" if @organization.can_transfer?(current_user) %>
     <%= link_to t("shared.actions.destroy"), @organization, data: { turbo_method: :delete, turbo_confirm: t("shared.actions.confirm") }, class: "du-btn du-btn-error du-btn-outline" if policy(@organization).destroy? %>
-  <% end %>
+  </div>
 <% end %>
