--- a/app/views/users/invitations/index.html.erb
+++ b/app/views/users/invitations/index.html.erb
@@ -2,6 +2,6 @@
 
 <%= render "organizations/tabs", active_tab: :invitations %>
 
-<%= render PageComponent.new(full_width: true) do |component| %>
+<%= render PageComponent.new do |component| %>
   <%= render "organizations/table" %>
 <% end %>
