--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -23,7 +23,7 @@
         <%= inline_svg_tag "svg/chevron-down.svg", class: "w-4 h-4 stroke-2 transition-transform duration-200 group-open:rotate-180" %>
       </summary>
       <div class="absolute top-full left-2 right-2 mt-1 bg-base-200 border border-base-content/20 z-50 rounded-lg p-1 du-menu">
-        <%= nav_link t("organizations.index.title"), organizations_path, icon: "svg/globe-europe-africa.svg", active: [ [ "organizations", "public/organizations", "users/invitations", "users/membership_requests" ], [] ] %>
+        <%= nav_link t("shared.navigation.organizations"), organizations_path, icon: "svg/globe-europe-africa.svg", active: [ [ "organizations", "public/organizations", "users/invitations", "users/membership_requests" ], [] ] %>
         <% Current.organizations.excluding(Current.organization).each do |organization| %>
           <%= nav_link organization.name, organization_dashboard_path(organization), icon: organization_avatar(organization, classes: "size-5") %>
         <% end %>
