--- a/app/views/users/connected_accounts/index.html.erb
+++ b/app/views/users/connected_accounts/index.html.erb
@@ -3,7 +3,7 @@
 <div class="space-y-6">
   <% available_providers = Devise.omniauth_configs.keys %>
   <% if available_providers.any? %>
-    <%= render PageComponent.new(title: t(".available_connections")) do |component| %>
+    <%= render PageComponent.new(title: t(".available_connections"), full_width: false) do |component| %>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-3">
         <% available_providers.each do |provider| %>
           <div class="border border-base-content/20 p-4 rounded-lg hover:bg-base-200 transition-colors">
@@ -26,7 +26,7 @@
     <% end %>
   <% end %>
 
-  <%= render PageComponent.new(title: t(".your_connected_accounts")) do |component| %>
+  <%= render PageComponent.new(title: t(".your_connected_accounts"), full_width: false) do |component| %>
     <% if @connected_accounts.any? %>
       <div class="space-y-3">
         <% current_user.connected_accounts.each do |connected_account| %>
