--- a/app/views/users/referrals/index.html.erb
+++ b/app/views/users/referrals/index.html.erb
@@ -1,4 +1,4 @@
-<%= render PageComponent.new(title: t(".title"), subtitle: t(".subtitle")) do |component| %>
+<%= render PageComponent.new(title: t(".title"), subtitle: t(".subtitle"), full_width: false) do |component| %>
   <div data-controller="clipboard" data-clipboard-success-content-value="<%= t("shared.actions.copied") %>" class="flex items-center gap-2">
     <%= text_field_tag nil, root_url(Refer.param_name => @referral_code.code), readonly: true, data: { clipboard_target: "source" }, class: "form-input" %>
     <button type="button" data-action="clipboard#copy" data-clipboard-target="button" class="du-btn du-btn-neutral"><%= t("shared.actions.copy") %></button>
