Set full_width: false for Devise PageComponent views
Adds the full_width: false option to all Devise authentication-related views using PageComponent for consistent layout. Also updates sign in and sign up links to include via_email: true in shared links partial.

--- a/app/views/devise/invitations/new.html.erb
+++ b/app/views/devise/invitations/new.html.erb
@@ -1,4 +1,4 @@
-<%= render PageComponent.new(title: t("devise.invitations.new.header")) do %>
+<%= render PageComponent.new(title: t("devise.invitations.new.header"), full_width: false) do %>
   <%= form_with model: resource, as: resource_name, url: invitation_path(resource_name), method: :post, class: "space-y-4" do |f| %>
     <%= render "shared/errors", object: resource %>
 
