--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -1,4 +1,4 @@
-<%= render PageComponent.new(title: t("devise.invitations.edit.header")) do %>
+<%= render PageComponent.new(title: t("devise.invitations.edit.header"), full_width: false) do %>
   <%= form_with model: resource, as: resource_name, url: invitation_path(resource_name), method: :put, class: "space-y-4" do |f| %>
     <%= render "shared/errors", object: resource %>
     <%= f.hidden_field :invitation_token, readonly: true %>
