--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<%= render PageComponent.new(title: t("devise.views.passwords.new.title")) do %>
+<%= render PageComponent.new(title: t("devise.views.passwords.new.title"), full_width: false) do %>
   <%= form_with model: resource, as: resource_name, url: password_path(resource_name), method: :post, class: "space-y-4" do |f| %>
     <%= render "shared/errors", object: resource %>
 
