--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,10 +1,10 @@
 <div class="flex flex-wrap gap-x-4 gap-y-2">
   <% if controller_name != 'sessions' %>
-    <%= link_to t("devise.views.shared.links.sign_in"), new_session_path(resource_name), class: "du-link du-link-primary", data: { turbo_frame: "_top" } %>
+    <%= link_to t("devise.views.shared.links.sign_in"), new_session_path(resource_name, via_email: true), class: "du-link du-link-primary", data: { turbo_frame: "_top" } %>
   <% end %>
 
   <% if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <%= link_to t("devise.views.shared.links.sign_up"), new_registration_path(resource_name), class: "du-link du-link-primary", data: { turbo_frame: "_top" } %>
+    <%= link_to t("devise.views.shared.links.sign_up"), new_registration_path(resource_name, via_email: true), class: "du-link du-link-primary", data: { turbo_frame: "_top" } %>
   <% end %>
 
   <% if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
