--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,4 +1,4 @@
-<%= render PageComponent.new(title: t("devise.views.unlocks.new.title")) do %>
+<%= render PageComponent.new(title: t("devise.views.unlocks.new.title"), full_width: false) do %>
   <%= render "devise/shared/oauth_links" %>
 
   <%= form_with model: resource, as: resource_name, url: unlock_path(resource_name), method: :post, class: "space-y-4" do |f| %>
