--- a/app/components/page_component.html.erb
+++ b/app/components/page_component.html.erb
@@ -1,7 +1,11 @@
 <section class="space-y-4 mx-auto <%= width_class %> @container">
-  <% if title.present? || action_list.present? %>
+  <% if title.present? || title_content.present? || action_list.present? %>
     <div class="flex flex-col @3xl:flex-row @3xl:justify-between gap-4">
-      <% if title.present? %>
+      <% if title_content.present? %>
+        <div class="flex-1">
+          <%= title_content %>
+        </div>
+      <% elsif title.present? %>
         <h1 class="font-medium text-2xl @3xl:text-3xl">
           <%= title %>
         </h1>
