--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -5,7 +5,7 @@
 <% if turbo_frame_request? %>
   <%= turbo_frame_tag :modal do %>
     <dialog class="du-modal <%= dialog_position %> backdrop-blur-lg transition-none" data-controller="dialog" data-action="click->dialog#clickOutside <%= close_on_submit ? "turbo:submit-end->dialog#hideOnSubmit" : "" %>">
-      <div class="du-modal-box space-y-2">
+      <div class="du-modal-box space-y-2 transition-none">
         <div class="absolute top-2 right-2 z-10">
           <form method="dialog" class="">
             <button class="du-btn du-btn-ghost du-btn-sm du-btn-circle">
